@@ -1,6 +1,6 @@
 # returning-data-from-temporary
 
-Warns when returning `QByteArray::data()` from a byte array that will soon be destroyed.
+Warns when returning the data from a `QByteArray` that will soon be destroyed.
 
 ## Examples
 ```
@@ -9,4 +9,13 @@ return b.data();
 ```
 ```
 return funcReturningByteArray().data();
+```
+
+
+```
+const char * getFoo()
+{
+    QByteArray b = ...;
+    return b; // QByteArray can implicitly cast to char*
+}
 ```
