@@ -33,6 +33,7 @@
     install-event-filter
     qcolor-from-literal
     strict-iterators
+  - returning-data-from-temporary now checks for temporary QByteArrays casting to char* when returned
   - ASTMatchers based checks are now supported
   - clang 3.7 was dropped due to ASTMatchers source incompatibilities.
     Use clazy v1.1 for clang >= 3.6 support
